crates/biome_cli/tests/snapshots/main_commands_format/treats_typescript_json_like_jsonc.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `typescript.json`

```json

/*test*/ [

/* some other comment*/1, 2, 3]
	
```

# Emitted Messages

```block
typescript.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Formatter would have printed the following content:
  
    1   │ - 
    2   │ - /*test*/·[
    3   │ - 
    4   │ - /*·some·other·comment*/1,·2,·3]
    5   │ - → 
      1 │ + /*test*/·[/*·some·other·comment*/·1,·2,·3]
      2 │ + 
  

```

```block
Compared 1 file(s) in <TIME>
```


