crates/biome_cli/tests/snapshots/main_commands_format/with_invalid_semicolons_option.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --semicolons asneed file.js
```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse CLI arguments.
    
    Caused by:
      couldn't parse `asneed`: Value not supported for Semicolons. Supported values are 'as-needed' and
      'always'.
  


```
