crates/biome_cli/tests/snapshots/main_commands_format/with_semicolons_options.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --semicolons=as-needed --write file.js
```

## `file.js`

```js
statement()

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
