crates/biome_cli/tests/snapshots/main_commands_format/write_only_files_in_correct_base.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write ./src
```

## `scripts/format.js`

```js
  statement(  )  
```

## `src/format.js`

```js
statement();

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
